@@ -13,6 +13,7 @@ Changelog
  * Fix: Wagtail's compiled static assets are now put into the correct directory on Windows (Aarni Koskela)
  * Fix: `ChooserBlock` now correctly handles models with primary keys other than `id` (alexpilot11)
  * Fix: Fixed typo in Wistia oEmbed pattern (Josh Hurd)
+ * Fix: Added more accurate help text for the Administrator flag on user accounts (Matt Fozard)
 
 1.3.1 (05.01.2016)
 ~~~~~~~~~~~~~~~~~~
